src/z80asm/z80asm2/t/20-preproc/expected/include_11.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/include_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/include_11.asm...
t/20-preproc/input/include_11.asm:1:9: error: Expected filename after INCLUDE
    #include ; no input file
            ^
